--- a/store-electro.html
+++ b/store-electro.html
@@ -194,8 +194,7 @@
 						<ul class="breadcrumb-tree">
 							<li><a href="index.html">Accueil</a></li>
 							<li><a href="#">Toutes les catégories</a></li>
-							<li><a href="#">Automobiles</a></li>
-							<li class="active">2 roues (3 Résultats)</li>
+							<li class="active"><a href="store-electro.html">Electroménager</a></li>
 						</ul>
 					</div>
 				</div>
@@ -343,16 +342,16 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product01.jpg" alt="">
+										<img src="./img/shop01.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-30%</span>
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">Automobiles</p>
-										<h3 class="product-name"><a href="#">Winner X</a></h3>
-										<h4 class="product-price">980.000 CFA <del class="product-old-price">990.000 CFA</del></h4>
+										<p class="product-category">Electroménager</p>
+										<h3 class="product-name"><a href="#">Rappeuse</a></h3>
+										<h4 class="product-price">98.000 CFA <del class="product-old-price">99.000 CFA</del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
@@ -377,15 +376,15 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product02.jpg" alt="">
+										<img src="./img/presse.jpg" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">Automobiles</p>
-										<h3 class="product-name"><a href="#">Moto à 2 roues</a></h3>
-										<h4 class="product-price">580.000 CFA <del class="product-old-price">590.000 CFA</del></h4>
+										<p class="product-category">Electroménager</p>
+										<h3 class="product-name"><a href="#">Presse Fruits</a></h3>
+										<h4 class="product-price">58.000 CFA <del class="product-old-price">59.000 CFA</del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
@@ -412,12 +411,12 @@
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/product03.jpg" alt="">
+										<img src="./img/product05.jpg" alt="">
 									</div>
 									<div class="product-body">
-										<p class="product-category">Automobiles</p>
-										<h3 class="product-name"><a href="#">Sirius Spéciale</a></h3>
-										<h4 class="product-price">980.000 CFA <del class="product-old-price">990.000 CFA</del></h4>
+										<p class="product-category">Electroménager</p>
+										<h3 class="product-name"><a href="#">Brosse à dents</a></h3>
+										<h4 class="product-price">80.000 CFA <del class="product-old-price">90.000 CFA</del></h4>
 										<div class="product-rating">
 										</div>
 										<div class="product-btns">
