--- a/blank.html
+++ b/blank.html
@@ -170,13 +170,11 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
+						<li class="active"><a href="#">Accueil</a></li>
+						<li><a href="#">Bonnes affaires</a></li>
+						<li><a href="store-auto.html">Automobiles</a></li>
+						<li><a href="store-electro.html">Electroménager</a></li>
 						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
