--- a/index.html
+++ b/index.html
@@ -172,11 +172,9 @@
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Accueil</a></li>
 						<li><a href="#">Bonnes affaires</a></li>
-						<li><a href="#">Catégories</a></li>
-						<li><a href="#">Laptops</a></li>
+						<li><a href="store-auto.html">Automobiles</a></li>
+						<li><a href="store-electro.html">Electroménager</a></li>
 						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessoires</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
