--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> Ouagadougou</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> CFA</a></li>
+						<li>CFA</a></li>
 						<li><a href="#"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 					</ul>
 				</div>
@@ -174,7 +174,6 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="#">Smartphones</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
