--- a/unknow-details.html
+++ b/unknow-details.html
@@ -47,7 +47,7 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> Ouagadougou</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> CFA</a></li>
+						<li>CFA</a></li>
 						<li><a href="#"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 					</ul>
 				</div>
@@ -174,7 +174,6 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="#">Smartphones</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -196,7 +195,7 @@
 							<li><a href="#">Toutes Catégories</a></li>
 							<li><a href="#">Automobiles</a></li>
 							<li><a href="#">2 roues</a></li>
-							<li class="active">Moto à 2 roues</li>
+							<li class="active">Finn</li>
 						</ul>
 					</div>
 				</div>
@@ -253,7 +252,7 @@
 					<!-- Product details -->
 					<div class="col-md-5">
 						<div class="product-details">
-							<h2 class="product-name">Moto à 2 roues</h2>
+							<h2 class="product-name">Finn</h2>
 							<div>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -265,10 +264,10 @@
 								<a class="review-link" href="#">10 Review(s) | Add your review</a>
 							</div>
 							<div>
-								<h3 class="product-price">580.000 CFA <del class="product-old-price">590.000 CFA</del></h3>
+								<h3 class="product-price">925.000 CFA <del class="product-old-price">925.000 CFA</del></h3>
 								<span class="product-available">En Stock</span>
 							</div>
-							<p>Moto à 2 roues</p>
+							<p>Finn</p>
 
 							<div class="product-options">
 								<label>
@@ -294,8 +293,8 @@
 							</div>
 
 							<ul class="product-btns">
-								<li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
-								<li><a href="#"><i class="fa fa-exchange"></i> add to compare</a></li>
+								<ul class="product-btns">
+								<li><a href="#"><i class="fa fa-heart-o"></i> Ajouter à votre liste de souhaits</a></li>
 							</ul>
 
 							<ul class="product-links">
@@ -550,6 +549,7 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="winner-details.html">
 							<div class="product-img">
 								<img src="./img/product01.jpg" alt="">
 								<div class="product-label">
@@ -557,9 +557,9 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<p class="product-category">Categorie</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Winner X</a></h3>
+								<h4 class="product-price">1 300.000 CFA <del class="product-old-price">1 300.000 CFA</del></h4>
 								<div class="product-rating">
 								</div>
 								<div class="product-btns">
@@ -571,6 +571,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
@@ -578,6 +579,7 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="unknow-details.html">
 							<div class="product-img">
 								<img src="./img/product02.jpg" alt="">
 								<div class="product-label">
@@ -585,9 +587,9 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Finn</a></h3>
+								<h4 class="product-price">925.000 CFA<del class="product-old-price">925.000 CFA</del></h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -604,6 +606,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
@@ -613,13 +616,14 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="sirius-details.html">
 							<div class="product-img">
 								<img src="./img/product03.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Sirius Spéciale</a></h3>
+								<h4 class="product-price">625.000 CFA <del class="product-old-price">625.000 CFA</del></h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -636,6 +640,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
@@ -643,13 +648,14 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="rappeuse-details.html">
 							<div class="product-img">
 								<img src="./img/product04.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Electroménager</p>
+								<h3 class="product-name"><a href="#">Rappeuse</a></h3>
+								<h4 class="product-price">98.000 CFA <del class="product-old-price">99.000 CFA</del></h4>
 								<div class="product-rating">
 								</div>
 								<div class="product-btns">
@@ -661,6 +667,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
