--- a/brosse-details.html
+++ b/brosse-details.html
@@ -47,7 +47,7 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> Ouagadougou</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> CFA</a></li>
+						<li>CFA</a></li>
 						<li><a href="#"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 					</ul>
 				</div>
@@ -174,7 +174,6 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="#">Smartphones</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -290,8 +289,7 @@
 							</div>
 
 							<ul class="product-btns">
-								<li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
-								<li><a href="#"><i class="fa fa-exchange"></i> add to compare</a></li>
+								<li><a href="#"><i class="fa fa-heart-o"></i> Ajouter à votre liste de souhaits</a></li>
 							</ul>
 
 							<ul class="product-links">
@@ -546,6 +544,7 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="winner-details.html">
 							<div class="product-img">
 								<img src="./img/product01.jpg" alt="">
 								<div class="product-label">
@@ -553,9 +552,9 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<p class="product-category">Categorie</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Winner X</a></h3>
+								<h4 class="product-price">980.000 CFA <del class="product-old-price">990.000 CFA</del></h4>
 								<div class="product-rating">
 								</div>
 								<div class="product-btns">
@@ -568,12 +567,14 @@
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
 						</div>
+					</a>
 					</div>
 					<!-- /product -->
 
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="unknow-details.html">
 							<div class="product-img">
 								<img src="./img/product02.jpg" alt="">
 								<div class="product-label">
@@ -581,9 +582,9 @@
 								</div>
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Moto à 2 roues</a></h3>
+								<h4 class="product-price">580.000 CFA<del class="product-old-price">590.000 CFA</del></h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -600,6 +601,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
@@ -609,13 +611,14 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="sirius-details.html">
 							<div class="product-img">
 								<img src="./img/product03.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Automobiles</p>
+								<h3 class="product-name"><a href="#">Sirius Spéciale</a></h3>
+								<h4 class="product-price">980.000 CFA <del class="product-old-price">990.000 CFA</del></h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -632,6 +635,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
@@ -639,13 +643,14 @@
 					<!-- product -->
 					<div class="col-md-3 col-xs-6">
 						<div class="product">
+							<a href="rappeuse-details.html">
 							<div class="product-img">
 								<img src="./img/product04.jpg" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Category</p>
-								<h3 class="product-name"><a href="#">product name goes here</a></h3>
-								<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+								<p class="product-category">Electroménager</p>
+								<h3 class="product-name"><a href="#">Rappeuse</a></h3>
+								<h4 class="product-price">98.000 CFA <del class="product-old-price">99.000 CFA</del></h4>
 								<div class="product-rating">
 								</div>
 								<div class="product-btns">
@@ -655,8 +660,9 @@
 								</div>
 							</div>
 							<div class="add-to-cart">
-								<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+								<a href="rappeuse-details.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 							</div>
+						</a>
 						</div>
 					</div>
 					<!-- /product -->
