--- a/store-auto.html
+++ b/store-auto.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Electro - HTML Ecommerce Template</title>
+		<title>EBIMAF</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -42,13 +42,13 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> +226 76 25 21 16</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> info@ebimaf.com</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> Ouagadougou</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+						<li>CFA</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 					</ul>
 				</div>
 			</div>
@@ -170,11 +170,10 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Accueil</a></li>
+						<li><a href="index.html">Accueil</a></li>
 						<li><a href="#">Bonnes affaires</a></li>
-						<li><a href="store-auto.html">Automobiles</a></li>
+						<li class="active"><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="#">Smartphones</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -217,15 +216,6 @@
 						<div class="aside">
 							<h3 class="aside-title">Catégories</h3>
 							<div class="checkbox-filter">
-
-								<div class="input-checkbox">
-									<input type="checkbox" id="category-2">
-									<label for="category-2">
-										<span></span>
-										Smartphones
-										<small>(2)</small>
-									</label>
-								</div>
 
 								<div class="input-checkbox">
 									<input type="checkbox" id="category-4">
@@ -274,23 +264,23 @@
 							<h3 class="aside-title">Meilleures ventes</h3>
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/product01.png" alt="">
+									<img src="./img/products1.jpg" alt="">
 								</div>
 								<div class="product-body">
-									<p class="product-category">Categorie</p>
-									<h3 class="product-name"><a href="#">product name goes here</a></h3>
-									<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+									<p class="product-category">Automobiles</p>
+									<h3 class="product-name"><a href="#">Sirius RC</a></h3>
+									<h4 class="product-price">675.000 CFA <del class="product-old-price">675.000 CFA</del></h4>
 								</div>
 							</div>
 
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/product02.png" alt="">
+									<img src="./img/Shop02.png" alt="">
 								</div>
 								<div class="product-body">
-									<p class="product-category">Category</p>
-									<h3 class="product-name"><a href="#">product name goes here</a></h3>
-									<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+									<p class="product-category">Automobiles</p>
+									<h3 class="product-name"><a href="#">Winner X</a></h3>
+									<h4 class="product-price">1 300.000 CFA <del class="product-old-price">1 300.000 CFA</del></h4>
 								</div>
 							</div>
 
@@ -299,8 +289,8 @@
 									<img src="./img/product03.png" alt="">
 								</div>
 								<div class="product-body">
-									<p class="product-category">Category</p>
-									<h3 class="product-name"><a href="#">product name goes here</a></h3>
+									<p class="product-category">Automobiles</p>
+									<h3 class="product-name"><a href="#">Scooteur</a></h3>
 									<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
 								</div>
 							</div>
@@ -342,6 +332,7 @@
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
+									<a href="winner-details.html">
 									<div class="product-img">
 										<img src="./img/product01.jpg" alt="">
 										<div class="product-label">
@@ -369,6 +360,7 @@
 									<div class="add-to-cart">
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> ajouter au panier</button>
 									</div>
+								</a>
 								</div>
 							</div>
 							<!-- /product -->
@@ -376,6 +368,7 @@
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
+									<a href="unknow-details.html">
 									<div class="product-img">
 										<img src="./img/product02.jpg" alt="">
 										<div class="product-label">
@@ -402,6 +395,7 @@
 									<div class="add-to-cart">
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> ajouter au panier</button>
 									</div>
+								</a>
 								</div>
 							</div>
 							<!-- /product -->
@@ -411,6 +405,7 @@
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
+									<a href="sirius-details.html">
 									<div class="product-img">
 										<img src="./img/product03.jpg" alt="">
 									</div>
@@ -429,6 +424,7 @@
 									<div class="add-to-cart">
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> ajouter au panier</button>
 									</div>
+								</a>
 								</div>
 							</div>
 							<!-- /product -->
