--- a/store.html
+++ b/store.html
@@ -47,8 +47,8 @@
 						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+						<li>CFA</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> Mon Compte</a></li>
 					</ul>
 				</div>
 			</div>
@@ -174,7 +174,6 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="#">Smartphones</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
