--- a/index.html
+++ b/index.html
@@ -267,6 +267,42 @@
 									<div class="products-slick" data-nav="#slick-nav-1">
 										<!-- product -->
 										<div class="product">
+											<a href="peche-details.html">
+											<div class="product-img">
+												<img src="./img/peche1.png" alt="">
+												<div class="product-label">
+													<span class="sale">-30%</span>
+													<span class="new">NOUVEAU</span>
+												</div>
+											</div>
+											<div class="product-body">
+												<p class="product-category">Electroménager</p>
+												<h3 class="product-name"><a href="#">Canne à pêche</a></h3>
+												<h4 class="product-price">7 800 CFA <del class="product-old-price">7 800 CFA</del></h4>
+												<div class="product-rating">
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+												</div>
+												<div class="product-btns">
+													<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+													<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+													<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+												</div>
+											</div>
+											<div class="add-to-cart">
+												<a href="peche-details.html"> 
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> ajouter au panier</button>
+												</a>
+											</div>
+										</a>
+										</div>
+										<!-- /product -->
+										
+										<!-- product -->
+										<div class="product">
 											<a href="winner-details.html">
 											<div class="product-img">
 												<img src="./img/product01.jpg" alt="">
