--- a/peche-details.html
+++ b/peche-details.html
@@ -174,6 +174,7 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
+						<li><a href="#">Immobilier</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -263,7 +264,7 @@
 								<a class="review-link" href="#">10 Review(s) | Add your review</a>
 							</div>
 							<div>
-								<h3 class="product-price">7.800 CFA <del class="product-old-price">7.800 CFA</del></h3>
+								<h3 class="product-price">8.500 CFA <del class="product-old-price">8.500 CFA</del></h3>
 								<span class="product-available">En Stock</span>
 							</div>
 							<p>Canne à pêche</p>
