--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li><a href="store-electro.html">Electroménager</a></li>
-						<li><a href="store-electro.html">Immobilier</a></li>
+						<li><a href="#">Immobilier</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
