--- a/store-electro.html
+++ b/store-electro.html
@@ -175,6 +175,7 @@
 						<li><a href="#">Bonnes affaires</a></li>
 						<li><a href="store-auto.html">Automobiles</a></li>
 						<li class="active"><a href="store-electro.html">Electroménager</a></li>
+						<li><a href="#">Immobilier</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
